--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
            <a href="https://av.siteseguro.ws/blog/marco-zero-em-recife-antigo/" ><li>Marco Zero</li></a>
            <a href="https://brazilspotlight.com/pontos-turisticos-de-recife/"><li>Mais pontos turiscicos</li></a> 
+           <a href="./novapag.html">Outros Destinos (NOVO)</a>
            <a href="https://visit.recife.br/o-que-fazer/atracoes/monumentos-historicos/parque-das-esculturas-de-francisco-brennand"><li>Um pouco mais de pontos turisticos</li></a>
             <img src="./mapa-recife-pernambuco.jpg"/>
         </ul>
