--- a/novapag.html
+++ b/novapag.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
+    <header>
+        <img
+        src="./logo-te-achei.png"
+        alt="logo-teAchei"
+        style="width: 80px"
+        id="logo"
+      >
     <nav>
         <ul>
             <a href="./index.html"><li>Retornar a página inicial.</li></a>
         </ul>
-    </nav>  
+    </nav>
+    </header> 
     <div>
         <h1>Sul do Brasil.</h1>
         <p>Há muitos lugares para conhecer no sul do brasil no inverno, que estão bem equipados para tirar o melhor proveito do clima!</p>
