--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
+    <header>
+        <img
+      src="./logo-te-achei.png"
+      alt="logo-teAchei"
+      style="width: 80px"
+      id="logo"
+    >
+   
     <nav>
+        
         <ul>
            <a href="https://av.siteseguro.ws/blog/marco-zero-em-recife-antigo/" ><li>Marco Zero</li></a>
            <a href="https://brazilspotlight.com/pontos-turisticos-de-recife/"><li>Mais pontos turiscicos</li></a> 
            <a href="./novapag.html">Outros Destinos (NOVO)</a>
            <a href="https://visit.recife.br/o-que-fazer/atracoes/monumentos-historicos/parque-das-esculturas-de-francisco-brennand"><li>Um pouco mais de pontos turisticos</li></a>
-            <img src="./mapa-recife-pernambuco.jpg"/>
+            
         </ul>
     </nav>
+    </header>
     <div>
     <h1>Praias, turismo e tudo mais.</h1>
     <p>O Nordeste reserva destinos turísticos maravilhosos para quem deseja viajar, curtir o verão e se encantar com paisagens deslumbrantes. Seja nas capitais ou no interior, escolher uma cidade nordestina para conhecer nunca deixa de ser uma boa opção. A capital pernambucana, Recife, recebe mais de um milhão de visitantes durante o ano. Praias, monumentos e construções históricas chamam a atenção dos turistas</p>
